# blog_writer

./: .env.example  .env.template  .gitignore  Makefile  README.md  app.py  chat.py  discussion.py  final_blog.py  gen_images.py  generate.py  main.py  pyproject.toml  requirement.txt  visual_content.py  web_server.py
.workspace/: blog_writter.code-workspace
api/: index.py
blog_writer/agents/: base.py  description.py  enrich_topic.py  enrichment.py  example_writer.py  extract_relevant_search.py  image_generator.py  outline.py  query_generator.py  reviewer.py  suggestion.py  title_generator.py  topics.py  write_critique.py  writer.py
blog_writer/cache/: cache_service.py
blog_writer/config/: config.py  definitions.py  logger.py
blog_writer/core/: final_blog.py  generate.py  rewrite.py
blog_writer/crawler/: crawl_extractor.py  crawl_service.py  file_extractor.py
blog_writer/model/: data.py  search.py
blog_writer/prompts/: __init__.py  description.txt  enrich_topic.txt  enrichment.txt  example_writer.txt  extract.txt  extract_code.txt  extract_relevant_search_json.txt  image_generator.txt  outline.txt  output_topics.txt  query_generator.txt  reviewer.txt  suggestion.txt  title_generator.txt  topics.txt  write_critique.txt  writer.txt
blog_writer/scripts/: list_models.py
blog_writer/simple-prompt/: .env.template  .gitignore  peer_review.py  peer_review_ui.py  playground.py  utils.py
blog_writer/simple-prompt/reviews/: system.txt  system_ui.txt
blog_writer/simple-prompt/reviews/output/tonho/: backup.txt
blog_writer/simple-prompt/reviews/peers/tonho/: readme.md
blog_writer/simple-prompt/reviews/questions/: 1.md  2.md  3.md  4.md  5.md
blog_writer/storage/: vector_storage.py
blog_writer/store/: storage.py
blog_writer/utils/: base_chat_model.py  bing_chat.py  embeddings.py  encoder.py  file.py  hf_chat.py  llm.py  parse_suggestions.py  stream_console.py  stream_token_handler.py  text.py  ts_chat.py
blog_writer/web_scraper/: __init__.py  base.py  ddg_search.py  extractor.py  factory.py  google_search.py  scraper.py
data/: example_search.json  example_topics.json  file.txt
hf_cookies/: dinhluchvc@gmail.com.json
streamlit_app/: app.py
templates/: blog_view.html  index.html  web_ui.html
tests/: test_parse_json.py  test_parse_raw.py  test_scraper.py
