[tool.poetry]
name = "blog-writer"
version = "0.1.0"
description = "Blog writer"
authors = ["thinhda"]
readme = "README.md"
packages = [{include = "blog_writer"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
duckduckgo-search = "^6.2.13"
bs4 = "^0.0.1"
streamlit = "^1.25.0"
google-api-python-client = "^2.96.0"
pytest = "^7.4.0"
html2text = "^2020.1.16"
langchain-core = "^0.3.7"
langchain-google-genai = "^2.0.0"
pillow = "^10.2.0"
langchain-openai = "^0.2.1"
flask = ">=3.0.0"
bing-chat = "^1.9.5"
re-edge-gpt = "^0.0.38"
unlimitedgpt = "^0.1.9.3"
chatgpt-selenium-automation = {git = "https://github.com/Michelangelo27/chatgpt_selenium_automation.git"}
langchain-community = "^0.3.1"
langchain-text-splitters = "^0.3.0"
langchain-google-community = "^2.0.0"
hugchat = "0.4.10"
datadog = "^0.49.1"
markdown = "^3.7"
crawl4ai = "^0.4.247"
pysondb = "^1.6.7"
werkzeug = ">=3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
